# actix-admin

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  deployment.sh  http-client.env.json  request.http
docs/: Dockerfile  http-client.env.json
docs/sql/: sys_menu.sql
docs/sql/system/: sys_menu.sql  sys_user.sql
docs/test/: http-client.env.json
docs/test/system/: sys_user.http  user.http
migrations/2023-08-14-012215_create_user/: down.sql  up.sql
migrations/2023-08-14-012248_create_role/: down.sql  up.sql
migrations/2023-08-14-012253_create_menu/: down.sql  up.sql
migrations/2023-08-14-012259_create_user_role/: down.sql  up.sql
migrations/2023-08-14-012306_create_role_menu/: down.sql  up.sql
src/: main.rs  schema.rs
src/common/: error.rs  mod.rs  result.rs  result_page.rs
src/config/: log4rs.yaml
src/handler/: menu_handler.rs  mod.rs  role_handler.rs  user_handler.rs
src/handler/system/: menu_handler.rs  mod.rs  role_handler.rs  sys_dept_handler.rs  sys_dict_data_handler.rs  sys_dict_type_handler.rs  sys_login_log_handler.rs  sys_menu_handler.rs  sys_notice_handler.rs  sys_operate_log_handler.rs  sys_post_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/model/: db.rs  entity.rs  menu.rs  mod.rs  prelude.rs  role.rs  sys_menu.rs  sys_role_menu.rs  user.rs  user_role.rs
src/model/system/: mod.rs  prelude.rs  role_menu.rs  sys_dept_model.rs  sys_dict_data_model.rs  sys_dict_type_model.rs  sys_login_log_model.rs  sys_menu.rs  sys_menu_model.rs  sys_notice_model.rs  sys_operate_log_model.rs  sys_post_model.rs  sys_role.rs  sys_role_menu.rs  sys_role_menu_model.rs  sys_role_model.rs  sys_user.rs  sys_user_model.rs  sys_user_role.rs  sys_user_role_model.rs
src/route/system/: mod.rs
src/utils/: auth.rs  db.rs  error.rs  jwt_util.rs  mod.rs  redis_util.rs
src/vo/: menu_vo.rs  mod.rs  role_vo.rs  user_vo.rs
src/vo/system/: menu_vo.rs  mod.rs  role_vo.rs  sys_dict_data_vo.rs  sys_dict_type_vo.rs  sys_menu_vo.rs  sys_role_vo.rs  sys_user_vo.rs  user_vo.rs
