[package]
name = "actix-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4", default-features = false, features = ["macros"]}
tracing-actix-web = "0.6"
tracing = "0.1"
futures-util = "0.3.25"

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

log = "0.4"
log4rs = "1.0"
#env_logger = "0.9"

diesel = { version = "2.1.0", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
once_cell = "1.18.0"

jsonwebtoken = "9.3.0"

redis = "0.25.3"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"