[package]
name = "actix-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
tracing-actix-web = "0.7.5"
tracing = "0.1"
futures-util = "0.3.25"

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }

log = "0.4"
#log4rs = "1.0"
#env_logger = "0.9"

tokio = { version = "1.29.1" }
sea-orm = { version = "1.0.1", features = ["sqlx-mysql", "runtime-async-std-native-tls", "with-chrono", "debug-print", "macros"] }
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"

jsonwebtoken = "9.3.0"

redis = "0.26.1"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"