[package]
name = "actix-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4", default-features = false, features = ["macros"]}
tracing-actix-web = "0.7.10"
tracing = "0.1"
futures-util = "0.3.25"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.19.0", features = ["derive"] }

log = "0.4"
log4rs = "1.0"

rbs = { version = "4.6"}
rbatis = { version = "4.6"}
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.6"}
rbdc-pool-fast={version="4.6"}

jsonwebtoken = "9.3.0"

redis = "0.31.0"

futures = { version = "0.3", default-features = false }
thiserror = "2.0.3"

regex = "1.11.1"
config = "0.15.9"